--- a/css/our-blog.css
+++ b/css/our-blog.css
@@ -15,7 +15,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 100%;
   align-items: flex-start;
 }
 .blog-part {
@@ -49,19 +48,18 @@
     object-fit: cover;
     margin-right: 5%;
 }
-@media (min-width: 768px) {
-  .our-blog {
-    width: 80%;
-  }
+
+@media (min-width: 894px) {
   .our-blog__main-posts {
-    flex-direction: row;
-    align-items: center;
+    flex-direction: row; /* Блоки в один рядок на широких екранах */
+    justify-content: space-between; /* Рівномірний розподіл по ширині */
+    gap: 20px; /* Простір між блоками */
   }
 
   .main-posts__not-to-use-pink,
   .main-posts__new-brands,
   .main-posts__trending-colors {
-    width: 100%;
-    margin-bottom: 20px;
+    width: calc(33.33% - 20px); /* Усі блоки однакової ширини */
+    box-sizing: border-box; /* Враховувати padding у ширині */
   }
 }
